[package]
name = "factory"
version = "0.1.0"
authors = ["Alphar <danielfrancis32610@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[[bin]]
name = "factory_schema"
path = "src/bin/schema.rs"

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.14"
cw-utils = "0.14"
cw2 = "0.14"
schemars = "0.8.10"
serde = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
pass_nft = { path = "../pass_nft" }

[dev-dependencies]
cw-multi-test = "0.14"